iOS Compatibility: Replace java.util.function.* with custom implementations
This commit completes Phase 1-2 of iOS Java 8 compatibility work, replacing
all java.util.function.* classes with custom forge.util.function.* implementations
that use Java 8 language features (lambdas, default methods) but avoid standard
library classes not supported by RoboVM/MobiVM on iOS.

- Created 7 custom functional interfaces in forge-core/src/main/java/forge/util/function/:
  * Predicate<T> - API-compatible with java.util.function.Predicate
  * Function<T,R>, BiFunction<T,U,R>
  * Consumer<T>, BiConsumer<T,U>
  * Supplier<T>, BinaryOperator<T>

- Replaced java.util.function imports in 338+ files across all modules:
  * forge-core: ~80 files
  * forge-game: ~93 files
  * forge-gui-mobile: ~84 files
  * forge-ai: ~23 files
  * forge-gui: ~40 files

- iOS build configuration updates:
  * Migrated to .xcframework (gdx.xcframework, ObjectAL.xcframework)
  * Updated robovm.xml and pom.xml

- Documentation:
  * Added CLAUDE.md (project guidance)
  * Added JAVA8_IOS_COMPATIBILITY_PLAN.md (implementation plan)

✅ App builds successfully
✅ App deploys and launches on iPad without crashing
✅ No java.util.function.* imports remaining in iOS modules

- java.util.stream.* - 72 imports (to be addressed in Phase 4)
- java.util.Optional - 9 imports (deferred for future work)

🤖 Generated with Claude Code (https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>